--- a/Cargo.toml
+++ b/Cargo.toml
@@ -147,6 +147,11 @@ stm32l4s9 = [
   "drone-stm32-drv-spi/stm32l4s9",
 ]
 
+[dependencies.drone-cortex-m]
+version = "0.9.0"
+git = "https://github.com/drone-os/drone-cortex-m"
+# path = "../../drone-cortex-m"
+
 [dependencies.drone-stm32-map]
 version = "0.9.0"
 git = "https://github.com/drone-os/drone-stm32-map"
