Add UART driver

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
   "drv-etc",
   "drv-i2c",
   "drv-spi",
+  "drv-uart",
 ]
 
 [package]
@@ -25,6 +26,7 @@ stm32f100 = [
   "drone-stm32-drv-etc/stm32f100",
   "drone-stm32-drv-i2c/stm32f100",
   "drone-stm32-drv-spi/stm32f100",
+  "drone-stm32-drv-uart/stm32f100",
 ]
 stm32f101 = [
   "drone-stm32-map/stm32f101",
@@ -33,6 +35,7 @@ stm32f101 = [
   "drone-stm32-drv-etc/stm32f101",
   "drone-stm32-drv-i2c/stm32f101",
   "drone-stm32-drv-spi/stm32f101",
+  "drone-stm32-drv-uart/stm32f101",
 ]
 stm32f102 = [
   "drone-stm32-map/stm32f102",
@@ -41,6 +44,7 @@ stm32f102 = [
   "drone-stm32-drv-etc/stm32f102",
   "drone-stm32-drv-i2c/stm32f102",
   "drone-stm32-drv-spi/stm32f102",
+  "drone-stm32-drv-uart/stm32f102",
 ]
 stm32f103 = [
   "drone-stm32-map/stm32f103",
@@ -49,6 +53,7 @@ stm32f103 = [
   "drone-stm32-drv-etc/stm32f103",
   "drone-stm32-drv-i2c/stm32f103",
   "drone-stm32-drv-spi/stm32f103",
+  "drone-stm32-drv-uart/stm32f103",
 ]
 stm32f107 = [
   "drone-stm32-map/stm32f107",
@@ -57,6 +62,7 @@ stm32f107 = [
   "drone-stm32-drv-etc/stm32f107",
   "drone-stm32-drv-i2c/stm32f107",
   "drone-stm32-drv-spi/stm32f107",
+  "drone-stm32-drv-uart/stm32f107",
 ]
 stm32l4x1 = [
   "drone-stm32-map/stm32l4x1",
@@ -65,6 +71,7 @@ stm32l4x1 = [
   "drone-stm32-drv-etc/stm32l4x1",
   "drone-stm32-drv-i2c/stm32l4x1",
   "drone-stm32-drv-spi/stm32l4x1",
+  "drone-stm32-drv-uart/stm32l4x1",
 ]
 stm32l4x2 = [
   "drone-stm32-map/stm32l4x2",
@@ -73,6 +80,7 @@ stm32l4x2 = [
   "drone-stm32-drv-etc/stm32l4x2",
   "drone-stm32-drv-i2c/stm32l4x2",
   "drone-stm32-drv-spi/stm32l4x2",
+  "drone-stm32-drv-uart/stm32l4x2",
 ]
 stm32l4x3 = [
   "drone-stm32-map/stm32l4x3",
@@ -81,6 +89,7 @@ stm32l4x3 = [
   "drone-stm32-drv-etc/stm32l4x3",
   "drone-stm32-drv-i2c/stm32l4x3",
   "drone-stm32-drv-spi/stm32l4x3",
+  "drone-stm32-drv-uart/stm32l4x3",
 ]
 stm32l4x5 = [
   "drone-stm32-map/stm32l4x5",
@@ -89,6 +98,7 @@ stm32l4x5 = [
   "drone-stm32-drv-etc/stm32l4x5",
   "drone-stm32-drv-i2c/stm32l4x5",
   "drone-stm32-drv-spi/stm32l4x5",
+  "drone-stm32-drv-uart/stm32l4x5",
 ]
 stm32l4x6 = [
   "drone-stm32-map/stm32l4x6",
@@ -97,6 +107,7 @@ stm32l4x6 = [
   "drone-stm32-drv-etc/stm32l4x6",
   "drone-stm32-drv-i2c/stm32l4x6",
   "drone-stm32-drv-spi/stm32l4x6",
+  "drone-stm32-drv-uart/stm32l4x6",
 ]
 stm32l4r5 = [
   "drone-stm32-map/stm32l4r5",
@@ -105,6 +116,7 @@ stm32l4r5 = [
   "drone-stm32-drv-etc/stm32l4r5",
   "drone-stm32-drv-i2c/stm32l4r5",
   "drone-stm32-drv-spi/stm32l4r5",
+  "drone-stm32-drv-uart/stm32l4r5",
 ]
 stm32l4r7 = [
   "drone-stm32-map/stm32l4r7",
@@ -113,6 +125,7 @@ stm32l4r7 = [
   "drone-stm32-drv-etc/stm32l4r7",
   "drone-stm32-drv-i2c/stm32l4r7",
   "drone-stm32-drv-spi/stm32l4r7",
+  "drone-stm32-drv-uart/stm32l4r7",
 ]
 stm32l4r9 = [
   "drone-stm32-map/stm32l4r9",
@@ -121,6 +134,7 @@ stm32l4r9 = [
   "drone-stm32-drv-etc/stm32l4r9",
   "drone-stm32-drv-i2c/stm32l4r9",
   "drone-stm32-drv-spi/stm32l4r9",
+  "drone-stm32-drv-uart/stm32l4r9",
 ]
 stm32l4s5 = [
   "drone-stm32-map/stm32l4s5",
@@ -129,6 +143,7 @@ stm32l4s5 = [
   "drone-stm32-drv-etc/stm32l4s5",
   "drone-stm32-drv-i2c/stm32l4s5",
   "drone-stm32-drv-spi/stm32l4s5",
+  "drone-stm32-drv-uart/stm32l4s5",
 ]
 stm32l4s7 = [
   "drone-stm32-map/stm32l4s7",
@@ -137,6 +152,7 @@ stm32l4s7 = [
   "drone-stm32-drv-etc/stm32l4s7",
   "drone-stm32-drv-i2c/stm32l4s7",
   "drone-stm32-drv-spi/stm32l4s7",
+  "drone-stm32-drv-uart/stm32l4s7",
 ]
 stm32l4s9 = [
   "drone-stm32-map/stm32l4s9",
@@ -145,6 +161,7 @@ stm32l4s9 = [
   "drone-stm32-drv-etc/stm32l4s9",
   "drone-stm32-drv-i2c/stm32l4s9",
   "drone-stm32-drv-spi/stm32l4s9",
+  "drone-stm32-drv-uart/stm32l4s9",
 ]
 
 [dependencies.drone-cortex-m]
@@ -176,3 +193,7 @@ path = "drv-i2c"
 [dependencies.drone-stm32-drv-spi]
 version = "=0.9.0"
 path = "drv-spi"
+
+[dependencies.drone-stm32-drv-uart]
+version = "=0.9.0"
+path = "drv-uart"
