--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
 name = "drone-stm32-drv"
 version = "0.9.0"
 authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
+edition = "2018"
 description = "Drone for STM32. Peripheral drivers."
 readme = "README.md"
 license = "MIT/Apache-2.0"
