--- a/drv-i2c/Cargo.toml
+++ b/drv-i2c/Cargo.toml
@@ -2,6 +2,7 @@
 name = "drone-stm32-drv-i2c"
 version = "0.9.0"
 authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
+edition = "2018"
 description = "Drone for STM32. I2C driver."
 license = "MIT/Apache-2.0"
 repository = "https://github.com/drone-os/drone-stm32-drv"
@@ -51,10 +52,7 @@ default-features = false
 [dependencies.failure]
 version = "0.1"
 default-features = false
-
-[dependencies.failure_derive]
-version = "0.1"
-default-features = false
+features = ["derive"]
 
 [dev-dependencies.test]
 version = "0.2"
