--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,5 +1,12 @@
-condense_wildcard_suffixes = true
+comment_width = 80
+edition = "2018"
+format_doc_comments = true
 format_strings = true
 max_width = 80
-reorder_imports = true
+merge_imports = true
+newline_style = "Unix"
+overflow_delimited_expr = true
 tab_spaces = 2
+use_field_init_shorthand = true
+version = "Two"
+wrap_comments = true
