--- a/drv-i2c/Cargo.toml
+++ b/drv-i2c/Cargo.toml
@@ -45,14 +45,9 @@ git = "https://github.com/drone-os/drone-stm32-map"
 version = "0.9.0"
 path = "../drv-dma"
 
-[dependencies.futures-preview]
-version = "0.2"
-default-features = false
-
-[dependencies.failure]
-version = "0.1"
-default-features = false
-features = ["derive"]
+[dependencies]
+futures-preview = { version = "0.3.0-alpha", default-features = false }
+failure = { version = "0.1", default-features = false, features = ["derive"] }
 
 [dev-dependencies.test]
 version = "0.2"
