--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
 edition = "2018"
 description = "Drone for STM32. Peripheral drivers."
 readme = "README.md"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/drone-os/drone-stm32-drv"
 
 [features]
@@ -41,6 +41,11 @@ git = "https://github.com/drone-os/drone-cortex-m"
 version = "0.9.0"
 git = "https://github.com/drone-os/drone-stm32-map"
 # path = "../drone-stm32-map"
+
+[dependencies.core]
+version = "0.1"
+git = "https://github.com/drone-os/drone-async-await"
+# path = "../drone-async-await"
 
 [dependencies]
 futures-preview = { version = "0.3.0-alpha", default-features = false }
